--- a/todo27/index.html
+++ b/todo27/index.html
@@ -2,42 +2,58 @@
 	<head>
 		<title>Bootstrap Example Challenge</title>
 		<link href="./css/bootstrap.css" rel="stylesheet" type="text/css"/>
+
+		<style>
+			body {
+				padding-top: 40px;  
+			}
+		</style>
 	</head>
 	
 	<body>
-		<nav>
-			<a href="#" class="logo">Project </a>
-			<ul>
-				<li><a href="#">Home</a></li>
-				<li><a href="#">About</a></li>
-				<li><a href="#">Contact</a></li>
-				<li><a href="#">Dropdown</a></li>
-			</ul>
-			<div class="login">
-				<form>
+		<nav class="navbar navbar-fixed-top navbar-inverse">
+			<div class="navbar-inner">
+				<a href="#" class="brand">Project </a>
+				<ul class="nav">
+					<li><a href="#">Home</a></li>
+					<li><a href="#">About</a></li>
+					<li><a href="#">Contact</a></li>
+					<li><a href="#">Dropdown</a></li>
+				</ul>
+				<form class="navbar-form pull-right">
 					<input type="text"/>
 					<input type="text"/>
-					<button type="submit">Sign In</button>
+					<button type="submit" class="btn">Sign In</button>
 				</form>
 			</div>
 		</nav>
 
-		<div class="hero">
-			<h2>Heading</h2>
+		<div class="hero-unit">
+			<h1>Hello World!</h1>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			<button href="#">View Details</button>
+			<button class = "btn btn-primary btn-large" href="#">View Details</button>
 		</div>
 
 		<div class="row">
-			<h2>Heading</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
-		</div>
+			<div class="span3">
+				<h2>Heading</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+				<button href="#" class="btn">View Details</a>
+			</div>
 
-		<div class="row">
-			<h2>Heading</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
-		</div>
+			<div class="span6">
+				<h2>Heading</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+				<button href="#" class="btn">View Details</a>
+			</div>
 
+			<div class="span4">
+				<h2>Heading</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+				<button href="#" class="btn">View Details</a>
+			</div>
+
+		</div>
 
 		<footer>
 			(c) Company 2013
