--- a/todo27/index.html
+++ b/todo27/index.html
@@ -5,58 +5,70 @@
 
 		<style>
 			body {
-				padding-top: 40px;  
+				padding-top: 60px;  
 			}
+
+			footer {
+				margin-top: 10px;
+				padding-top: 10px;
+				border-top: 1px solid black;
+			}
+			/* {
+				border: 1px dashed red;
+			}*/
 		</style>
 	</head>
 	
 	<body>
-		<nav class="navbar navbar-fixed-top navbar-inverse">
-			<div class="navbar-inner">
-				<a href="#" class="brand">Project </a>
-				<ul class="nav">
-					<li><a href="#">Home</a></li>
-					<li><a href="#">About</a></li>
-					<li><a href="#">Contact</a></li>
-					<li><a href="#">Dropdown</a></li>
-				</ul>
-				<form class="navbar-form pull-right">
-					<input type="text"/>
-					<input type="text"/>
-					<button type="submit" class="btn">Sign In</button>
-				</form>
-			</div>
-		</nav>
+		<div class="container">
+			<nav class="navbar navbar-fixed-top navbar-inverse">
+				<div class="navbar-inner">
+					<a href="#" class="brand">Project </a>
+					<ul class="nav">
+						<li><a href="#">Home</a></li>
+						<li><a href="#">About</a></li>
+						<li><a href="#">Contact</a></li>
+						<li><a href="#">Dropdown</a></li>
+					</ul>
+					<form class="navbar-form pull-right">
+						<input type="text"/>
+						<input type="text"/>
+						<button type="submit" class="btn">Sign In</button>
+					</form>
+				</div>
+			</nav>
 
-		<div class="hero-unit">
-			<h1>Hello World!</h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			<button class = "btn btn-primary btn-large" href="#">View Details</button>
-		</div>
-
-		<div class="row">
-			<div class="span3">
-				<h2>Heading</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
-				<button href="#" class="btn">View Details</a>
+			<div class="hero-unit">
+				<h1>Hello World!</h1>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<button class = "btn btn-primary btn-large" href="#">View Details</button>
 			</div>
 
-			<div class="span6">
-				<h2>Heading</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
-				<button href="#" class="btn">View Details</a>
+			<div class="row">
+				<div class="span2">
+					<h2>Heading</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+					<button href="#" class="btn">View Details</a>
+				</div>
+
+				<div class="span6">
+					<h2>Heading</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+					<button href="#" class="btn">View Details</a>
+				</div>
+
+				<div class="span4">
+					<h2>Heading</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+					<button href="#" class="btn">View Details</a>
+				</div>
+
 			</div>
 
-			<div class="span4">
-				<h2>Heading</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
-				<button href="#" class="btn">View Details</a>
-			</div>
+			<footer>
+				(c) Company 2013
+			</footer>
 
-		</div>
-
-		<footer>
-			(c) Company 2013
-		</footer>
+		</body>
 	</body>
 </html>
